Fix link color for forced-color mode in high contrast themes
Before:
https://issues.chromium.org/493628986#attachment74433698

After:
https://issues.chromium.org/493628986#attachment74433699

Bug: 493628986
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/7673521
Commit-Queue: Sylvester Elorm Coch <elormcoch@microsoft.com>

--- a/front_end/ui/kit/link/link.css
+++ b/front_end/ui/kit/link/link.css
@@ -13,8 +13,8 @@
 
 @media (forced-colors: active) {
   :host {
-    background: Highlight;
-    color: HighlightText;
+    forced-color-adjust: none;
+    color: linktext;
   }
 }
 
